--- a/HTML e CSS/prompt.html
+++ b/HTML e CSS/prompt.html
@@ -22,6 +22,6 @@ var dias = idade * 365
 mostra("Você já viveu " + dias + " dias de vida!")
 
 var frequenciacardiaca = (220 - idade)
-mostra("Sua frequencia cardiaca eh: " + frequenciacardiaca + " bpm")
+mostra("Sua frequência cardíaca é: " + frequenciacardiaca + " bpm")
 
 </script>
